--- a/website/assets/css/cover.css
+++ b/website/assets/css/cover.css
@@ -44,14 +44,14 @@ body {
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 
-          background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0.2%, rgba(25,133,161, 0.90) 10%), url("../img/timeline.jpg") no-repeat;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(90%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.90))), url("../img/timeline.jpg") no-repeat;
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0.2%, rgba(25,133,161, 0.90) 10%), url("../img/timeline.jpg") no-repeat;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0.2%, rgba(25,133,161, 0.90) 10%), url("../img/timeline.jpg") no-repeat;
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0.2%, rgba(25,133,161, 0.90) 10%), url("../img/timeline.jpg") no-repeat;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0.2%, rgba(25,133,161, 0.90) 10%), url("../img/timeline.jpg") no-repeat;
+          background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(25,133,161, 0.50) 50%), url("../img/city.jpg") no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(30%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.90))), url("../img/timeline.jpg") no-repeat;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(25,133,161, 0.50) 50%), url("../img/city.jpg") no-repeat;
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(25,133,161, 0.50) 50%), url("../img/city.jpg") no-repeat;
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(25,133,161, 0.50) 50%), url("../img/city.jpg") no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(25,133,161, 0.50) 50%), url("../img/city.jpg") no-repeat;
   background-size:100%;
-    background-position: bottom; 
+    
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -169,4 +169,13 @@ body {
   .cover-container {
     width: 700px;
   }
+}
+
+.regform{
+  color: grey;
+}
+
+.regform .col-sm-8, .regform .col-md-8, .regform .col-md-4, .regform .col-sm-4
+{
+  padding: 0;
 }
