--- a/website/angular/views/portal/planner.html
+++ b/website/angular/views/portal/planner.html
@@ -1,189 +1,6 @@
-<style>
-html, body, .row-offcanvas {
-  height:100%;
-  margin-bottom: -150px;
-  overflow: hidden;
-}
-
-#sidebar {
-  width: inherit;
-  min-width: 80px;
-  max-width: 80px;
-  background-color:#f5f5f5;
-  float: left;
-  height:100%;
-  position:relative;
-  overflow-y:auto;
-  overflow-x:hidden;
-  border-right: 1px solid #A2999E;
-}
-#main {
-  height:100%;
-  overflow:auto;
-}
-
-.popup-bar
-{
-  border: none; z-index: 999; width: 300px; padding: 0;
-  height: 100%;
-  margin-bottom: 0;
-}
-
-.popup-bar > .header
-{
-  height: 100px;
-  background: #00d2ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #00d2ff , #3a7bd5); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #00d2ff , #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.popup-bar > .header > h3
-{
-  text-align: center; margin-top: 0; padding-top: 20px; color: white;
-}
-
-.popup-bar > .pop-body
-{
-  padding-left: 25px;
-}
-
-.popup-bar > .pop-body > .sectionTitle
-{
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.popup-bar > .pop-body > .sub-header
-{
-  font-size: 14px; font-weight: bold;
-}
-
-.horizontal-override 
-{
-  margin-left: 80px; position: absolute; width: 300px; z-index: 999; height: 100%;
-}
-.checkboxes {
-    columns: 2 2em;
-    list-style: none;
-    margin-left: -20px;
-    margin-right: 15px;
-}
-.box {
-    height: calc(100vh - 305px); /*50+60*/
-    overflow-y: scroll;
-    overflow-x: hidden;
-    margin-left: -25px;
-}
-.box::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
-}
-
-.box::-webkit-scrollbar
-{
-	width: 6px;
-	background-color: #F5F5F5;
-}
-
-.box::-webkit-scrollbar-thumb
-{
-	background-color: #4F4F4F;
-	border: 2px solid #555555;
-}
-
-/*
- * off Canvas sidebar
- * --------------------------------------------------
- */
-@media screen and (max-width: 768px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
-    width:calc(100% + 220px);
-  }
-    
-  .row-offcanvas-left
-  {
-    left: -220px;
-  }
-
-  .row-offcanvas-left.active {
-    left: 0;
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-  }
-  .well {
-     border: none;
-  }
-  
-}
-</style>
-
-<div class="row-offcanvas row-offcanvas-left">
-  <div id="sidebar" class="sidebar-offcanvas">
-      <div class="col-md-12">
-        <h3>Tc</h3>
-        <ul class="nav nav-pills nav-stacked" style="margin-top: 50px;">
-          
-          <li>
-              <i class="fa fa-users" aria-hidden="true" style="width: 100%; font-size: 32px; text-align: center"></i>
-              <div style="width: 100%; text-align: center;">Social</div>
-          </li>
-          <li style="padding-top: 15px;">
-              <i class="fa fa-map-o" aria-hidden="true" style="width: 100%; font-size: 32px; text-align: center" ng-click="isCollapsedHorizontal = !isCollapsedHorizontal"></i>
-              <div style="width: 100%; text-align: center;">Map</div>
-          </li>
-          <li style="padding-top: 15px;">
-              <i class="fa fa-search" aria-hidden="true" style="width: 100%; font-size: 32px; text-align: center"></i>
-              <div style="width: 100%; text-align: center;">Search</div>
-          </li>
-
-        </ul>
-      </div>
-  </div>
-  <div class="horizontal-collapse horizontal-override" uib-collapse="isCollapsedHorizontal" horizontal>
-		<div class="well well-lg popup-bar">
-            <div class="header">
-              <h3>Aberdeen <br /><small>Showing {{foundCount}} attractions.</small></h3>
-            </div>
-            <div class="pop-body">
-              <h4 class="sectionTitle">Search Filters</h4>
-              <h4 class="sub-header">Types</h4>
-              <ul class="checkboxes">
-                  <li ng-repeat="filter in filters"><label><input type="checkbox" name="text2" value="value2" ng-click="updateFilters(attraction)" />{{filter}}</label></li>
-              </ul>
-              <div style="border-top: 1px solid black; text-align: center; margin-right: 20px;" ng-click="showMoreFilters()">Show More {{filter_count}} Filters</div>
-              <h4 class="sub-header">Attractions</h4>
-              <div class="box list-group">
-                  <div ng-repeat="attraction in attractions" ng-click="selectAttraction(attraction)" class="list-group-item" ng-class="attraction.selected ? 'active' : ''">{{attraction.name}}</div>
-              </div>
-            </div>
-        </div>
-	</div>
-  <div id="main">
-      <div class="col-md-12">
-      	  <p class="visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button>
-          </p>
-          <div class="row">
-              <div class="col-md-12">
-                <div id="map" class="map" style="width: 100%; height: 100%; position:fixed; margin-left: -15px;"></div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div><!--/row-offcanvas -->
-
-    <!-- Angular Templates -->
-
-    <script type="text/ng-template" id="filtersPopup.html">
-      <ul class="checkboxes">
-          <li ng-repeat="filter in filters"><label><input type="checkbox" name="text2" value="value2" />{{filter}}</label></li>
-      </ul>
-    </script>
+<div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%; position:fixed; margin-left: -15px;">
+    <div style="position: absolute; z-index: 999; width: 20%; right: 0px; top: 10px;">
+        <i class="fa fa-filter" aria-hidden="true" style="font-size: 32px; " ng-click="isCollapsedHorizontal = !isCollapsedHorizontal"></i>
+        <i class="fa fa-search" aria-hidden="true" style="font-size: 32px;"></i>
+    </div>
+</div>
