Working on Bucket

--- a/website/angular/views/portal/bucket.html
+++ b/website/angular/views/portal/bucket.html
@@ -4,31 +4,71 @@
     <div uib-accordion-group class="panel-default" heading="Static Header, initially expanded">
       This content is straight in the template.
     </div>
-    <div uib-accordion-group class="panel-default" heading="buk">
-      <div class="col-md-10 col-md-offset-1">
-            <div class="well well-sm">
-                <div class="row">
-                    <div class="col-xs-3 col-md-3 text-center">
-                        <img src="64/Poland.png" alt="bootsnipp"
-                            class="img-rounded img-responsive" style="min-height: 60px" />
-                    </div>
-                    <div class="col-xs-9 col-md-9 section-box">
-                        <h3>
-                            Bootsnipp <a href="http://bootsnipp.com/" target="_blank"><span class="glyphicon glyphicon-new-window">
-                            </span></a>
-                        </h3>
-                        <hr />
-                        <div class="row rating-desc">
-                            <div class="col-md-12">
-                                <span class="glyphicon glyphicon-heart"></span><span class="glyphicon glyphicon-heart">
-                                </span><span class="glyphicon glyphicon-heart"></span><span class="glyphicon glyphicon-heart">
-                                </span><span class="glyphicon glyphicon-heart"></span>(36)<span class="separator">|</span>
-                                <span class="glyphicon glyphicon-comment"></span>(100 Comments)
+    <div uib-accordion-group class="panel-default" heading="Summer 2017">
+      <div class="col-md-10 col-md-offset-1 col-sm-12">
+            <div class="col-md-6 col-sm-12">
+                    <div class="card-style">
+                        <div class="media">
+
+                            <div class="media-left">
+                                <img class="media-object img-thumbnail card-img" src="64/Scotland.png">
+                            </div>
+
+                            <div class="media-body">
+                                <a href="#"><h5 class="media-heading">Aberdeen - Scotland</h5></a>
+                                <div class="members pull-left"><small>1.235 People want to go too</small></div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="card-style">
+                        <div class="media">
+
+                            <div class="media-left">
+                                <img class="media-object img-thumbnail card-img" src="https://goo.gl/cJajax">
+                            </div>
+
+                            <div class="media-body">
+                                <a href="#"><h5 class="media-heading">Disc. Programação Internet Rica - 2016.2</h5></a>
+                                <div class="members pull-left"><small>1.235 Members</small></div><div class="btn btn-sm btn-danger pull-right btn-part">Join Group</div>
+                                <div class="btn btn-sm btn-danger pull-right btn-part">+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="card-style">
+                        <div class="media">
+
+                            <div class="media-left">
+                                <img class="media-object img-thumbnail card-img" src="https://goo.gl/cJajax">
+                            </div>
+
+                            <div class="media-body">
+                                <a href="#"><h5 class="media-heading">Disc. Programação Internet Rica - 2016.2</h5></a>
+                                <div class="members pull-left"><small>1.235 Members</small></div><div class="btn btn-sm btn-danger pull-right btn-part">Join Group</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-xs-12">
+                    <div class="card-style">
+                        <div class="media">
+
+                            <div class="media-left">
+                                <img class="media-object img-thumbnail card-img" src="64/Poland.png">
+                            </div>
+
+                            <div class="media-body">
+                                <a href="#"><h5 class="media-heading">Warsaw - Poland</h5></a>
+                                <div class="members pull-left"><small>1.235 Members</small></div><div class="btn btn-sm btn-danger pull-right btn-part">Join Group</div>
+                                <div class="btn btn-sm btn-danger pull-right btn-part">+</div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
   </uib-accordion>
