--- a/website/assets/css/bucket.css
+++ b/website/assets/css/bucket.css
@@ -1,7 +1,38 @@
-.glyphicon { margin-right:5px;}
-.section-box h3 { margin-top:0px;}
-.section-box h3 a { font-size:15px; }
-.glyphicon-heart { color:#e74c3c;}
-.glyphicon-comment { color:#27ae60;}
-.separator { padding-right:5px;padding-left:5px; }
-.section-box hr {margin-top: 0;margin-bottom: 5px;border: 0;border-top: 1px solid rgb(199, 199, 199);}
+.card-style {
+    display: block;
+    background-color: #fff;
+    height: 100px;
+    margin: 20px 0px;
+    box-shadow: 1px 1px 8px #999;
+    cursor: pointer;
+}
+.card-img {
+    height: 100px;
+    width: 100px;
+}
+.media-heading {
+    margin-top: 10px;
+    color: #444;
+}
+.media-heading:hover, a:link {
+    color: #00C853;
+    text-decoration: none;
+}
+.members {
+    margin-top: 20px;
+    color: #999;
+    float: left;
+ }
+ .btn-part {
+     display: inline-block;
+     margin: 10px;
+     float: right;
+ }
+ .badge {
+     display: inline-block;
+     background: #00C853;
+     float: right;
+     padding: 7px;
+     border-radius: 50px;
+     margin: 10px;
+ }
