--- a/website/angular/views/portal/profile.html
+++ b/website/angular/views/portal/profile.html
@@ -1,53 +1,21 @@
-<div class="col-md-8 col-sm-6 col-md-offset-2">
-    <div class="panel panel-default" style="margin-top: 20px; margin-bottom: -1px">
-        <div class="panel-body">
-            <div class="col-md-2">
-                <img ng-src="{{profileData.profile.photo}}"  class="img-rounded img-responsive">
-            </div>
-            <div class="col-md-10">
-                <dl>
-                    <dt><h2>{{profileData.firstname + " " + profileData.surname}}</h2></dt>
-                    <dd>{{profileData.profile.description}}</dd>
-                    <dd style="margin-top: 45px;"><button type="button" class="btn btn-success">Follow</button></dd>
-                </dl>
-                
-            </div>
-        </div>
-    </div>
-    <uib-tabset active="activeJustified" justified="true">
-        <uib-tab index="0">
-             <uib-tab-heading>
-                <i class="fa fa-comment-o"></i> Activity Feed
-            </uib-tab-heading>
-            <div class="col-md-6 col-sm-6" style="margin-top: 20px;">
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Status Update">
-            </div>
-            <div class="col-md-6 col-sm-6" style="margin-top: 20px;">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Recent Photos</h3>
-                    </div>
-                    <div class="panel-body">
-                        Panel content
-                    </div>
-                </div>
-                <h4><i class="fa fa-calendar" aria-hidden="true"></i> Upcoming Journeys</h4>
-            </div>
-        </uib-tab>
-        <uib-tab index="1">
-            <uib-tab-heading>
-                <i class="fa fa-list"></i> About {{profileData.firstname}}
-            </uib-tab-heading>
-        </uib-tab>
-        <uib-tab index="2">
-            <uib-tab-heading>
-                <i class="fa fa-camera"></i> Photos
-            </uib-tab-heading>
-        </uib-tab>
-        <uib-tab index="3">
-            <uib-tab-heading>
-                <i class="fa fa-heart-o"></i> Following
-            </uib-tab-heading>
-        </uib-tab>
-    </uib-tabset>
+<div class="col-md-6 col-md-offset-3">
+    <img ng-src="{{profileData.profile.photo}}" style="height: 100px; margin-top: 60px;" class="img-circle center-block">
+    <h2 class="text-center">{{profileData.firstname + " " + profileData.surname}}</h2>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Left</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Middle</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Right</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Right</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Right</button>
+  </div>
+</div>
 </div>
