--- a/website/angular/views/portal/planner.html
+++ b/website/angular/views/portal/planner.html
@@ -1,6 +1,26 @@
-<div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%; position:fixed; margin-left: -15px;">
-    <div style="position: absolute; z-index: 999; width: 20%; right: 0px; top: 10px;">
-        <i class="fa fa-filter" aria-hidden="true" style="font-size: 32px; " ng-click="isCollapsedHorizontal = !isCollapsedHorizontal"></i>
-        <i class="fa fa-search" aria-hidden="true" style="font-size: 32px;"></i>
+<div style="position: absolute; top: 0; height: 100%; width: 100%; z-index: 0; overflow: hidden;">
+  <div class="col-md-2 mapNavbar" style="overflow-y: scroll; overflow-x: hidden;">
+    <uib-tabset active="activeJustified" justified="true">
+      <uib-tab index="0" heading="">
+        <section>
+        <i class="fa fa-arrow-left" aria-hidden="true" style="font-size: 24px; line-height: 48px;"></i> Back
+          <span style="float: right; font-size: 24px; line-height:48px;">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-filter" aria-hidden="true" ng-click="showMoreFilters()"></i>
+          </span>
+        </section>
+        <section style="margin-top: 10px;">
+          <div class="box list-group">
+              <div ng-repeat="attraction in attractions" ng-click="selectAttraction(attraction)" class="list-group-item" ng-class="attraction.selected ? 'active' : ''">{{attraction.name}}</div>
+          </div>
+        </section>
+      </uib-tab>
+      <uib-tab index="1" heading="">Filters</uib-tab>
+      <uib-tab index="2" heading="">Attractions</uib-tab>
+    </uib-tabset>
+  </div>
+  <div class="col-md-10" style="padding: 0;">
+    <div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%;">
     </div>
+  </div>
 </div>
