--- a/website/angular/views/portal/profile.html
+++ b/website/angular/views/portal/profile.html
@@ -1,21 +1,21 @@
 <div class="col-md-6 col-md-offset-3">
     <img ng-src="{{profileData.profile.photo}}" style="height: 100px; margin-top: 60px;" class="img-circle center-block">
-    <h2 class="text-center">{{profileData.firstname + " " + profileData.surname}}</h2>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+    <h2 class="text-center profile-Name">{{profileData.firstname + " " + profileData.surname}}</h2>
+    <div class="btn-group btn-group-justified profile-Bar" role="group" aria-label="...">
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Left</button>
+    <button type="button" class="btn btn-default"><i class="fa fa-camera" aria-hidden="true"></i> Photos</button>
   </div>
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Middle</button>
+    <button type="button" class="btn btn-default"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</button>
   </div>
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Right</button>
+    <button type="button" class="btn btn-default"><i class="fa fa-suitcase" aria-hidden="true"></i> Journeys</button>
   </div>
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Right</button>
+    <button type="button" class="btn btn-default"><i class="fa fa-users" aria-hidden="true"></i> Following</button>
   </div>
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Right</button>
+    <button type="button" class="btn btn-default"><i class="fa fa-users" aria-hidden="true"></i> Followers</button>
   </div>
 </div>
 </div>
