--- a/website/angular/views/portal/social.html
+++ b/website/angular/views/portal/social.html
@@ -1,7 +1,6 @@
-<div style="width: 100%; height: 100%; position:fixed; margin-left: -15px;">
-    <uib-tabset active="activeJustified" justified="true">
-        <uib-tab index="0" heading="Social Feed">
-            <div class="panel panel-default" style="margin-top: 25px; width: 600px; margin-left: auto; margin-right: auto;" ng-repeat="person in followers">
+
+
+            <div class="panel panel-default" style="width: 600px; margin-left: auto; margin-right: auto;" ng-repeat="person in followers">
                 <div class="panel-body">
                     <div class="col-md-10 col-md-push-2" style="padding-left: 0; height: 60px;">
                         <dl>
@@ -15,17 +14,3 @@
                     </div>
                 </div>
             </div>
-        </uib-tab>
-        <uib-tab index="1" heading="Search">
-            <input type="text" class="form-control" placeholder="Person/Agency" style="width: 500px; margin-left: auto; margin-right: auto; margin-top: 25px;">
-        </uib-tab>
-        <uib-tab index="2" heading="Upload Photos">
-            <div style="width: 200px; margin-left: auto; margin-right: auto;">
-                <div style="text-align: center; margin-top: 100px;">
-                    <i class="fa fa-picture-o" aria-hidden="true" style="font-size: 124px;"></i><br />
-                        Drag & Drop Images to Upload
-                </div>
-            </div>
-        </uib-tab>
-    </uib-tabset>
-</div>
