--- a/website/angular/views/portal/planner.html
+++ b/website/angular/views/portal/planner.html
@@ -1,7 +1,15 @@
-<div style="position: absolute; top: 0; height: 100%; width: 100%; z-index: 0; overflow: hidden;">
-  <div class="col-md-2 mapNavbar" style="overflow-y: scroll; overflow-x: hidden;">
+<div class="plannerContainer" style="top: 0; height: 100%; width: 100%; z-index: 0; overflow: hidden; display: flex;
+  flex-direction:row; margin-bottom: -150px;">
+  <div class="col-sm-3 col-md-3 col-lg-3 mapNavbar">
     <uib-tabset active="activeJustified" justified="true">
       <uib-tab index="0" heading="">
+        <h4>Enter City</h4>
+        <section style="margin-top: 10px;">
+          <input type="text" class="form-control" placeholder="Text input">
+        </section>
+      </uib-tab>
+      <uib-tab index="1" heading="">Filters</uib-tab>
+      <uib-tab index="2" heading="">
         <section>
         <i class="fa fa-arrow-left" aria-hidden="true" style="font-size: 24px; line-height: 48px;"></i> Back
           <span style="float: right; font-size: 24px; line-height:48px;">
@@ -9,18 +17,16 @@
             <i class="fa fa-filter" aria-hidden="true" ng-click="showMoreFilters()"></i>
           </span>
         </section>
-        <section style="margin-top: 10px;">
+        <section>
           <div class="box list-group">
               <div ng-repeat="attraction in attractions" ng-click="selectAttraction(attraction)" class="list-group-item" ng-class="attraction.selected ? 'active' : ''">{{attraction.name}}</div>
           </div>
         </section>
       </uib-tab>
-      <uib-tab index="1" heading="">Filters</uib-tab>
-      <uib-tab index="2" heading="">Attractions</uib-tab>
     </uib-tabset>
   </div>
-  <div class="col-md-10" style="padding: 0;">
-    <div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%;">
+  <div class="col-md-4 col-lg-9" style="padding: 0; height: 100%;">
+    <div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%; margin-bottom: -100px">
     </div>
   </div>
 </div>
