--- a/website/angular/views/portal/planner.html
+++ b/website/angular/views/portal/planner.html
@@ -1,32 +1,96 @@
 <div class="plannerContainer" style="top: 0; height: 100%; width: 100%; z-index: 0; overflow: hidden; display: flex;
   flex-direction:row; margin-bottom: -150px;">
-  <div class="col-sm-3 col-md-3 col-lg-3 mapNavbar">
+  <div class="col-sm-3 col-md-3 col-lg-2 mapNavbar">
     <uib-tabset active="activeJustified" justified="true">
-      <uib-tab index="0" heading="">
-        <h4>Enter City</h4>
+      <uib-tab heading="" active="activeJustified == 0">
         <section style="margin-top: 10px;">
-          <input type="text" class="form-control" placeholder="Text input">
+          <form name="myForm">
+              <div class="form-group">
+                <label for="exampleInputEmail2">Destination</label>
+                <input name="enteredCity" type="text" class="form-control">
+              </div>
+              <button type="submit" class="btn btn-default" ng-click="searchCity()">Search</button>
+          </form>
+        </section>
+        <section style="margin-top: 20px;">
+          <div ng-if="results.length > 0">Results for {{enteredCity}}</div>
+          <div class="panel panel-default" ng-repeat="found in results" ng-click="centerMap(found.coords.y, found.coords.x)">
+            <div class="panel-body">
+              {{found.city}}
+            </div>
+          </div>
         </section>
       </uib-tab>
-      <uib-tab index="1" heading="">Filters</uib-tab>
-      <uib-tab index="2" heading="">
+      <uib-tab heading="" active="activeJustified == 1">
         <section>
-        <i class="fa fa-arrow-left" aria-hidden="true" style="font-size: 24px; line-height: 48px;"></i> Back
+        <i class="fa fa-arrow-left" aria-hidden="true" style="font-size: 24px; line-height: 48px;" ng-click="goBack()"></i> Back
           <span style="float: right; font-size: 24px; line-height:48px;">
             <i class="fa fa-search" aria-hidden="true"></i>
             <i class="fa fa-filter" aria-hidden="true" ng-click="showMoreFilters()"></i>
+            <i class="fa fa-map-marker" aria-hidden="true">
+              <span style="font-size: 18px">{{selectedAttractionsText}}</span>
+            </i>
           </span>
         </section>
         <section>
           <div class="box list-group">
-              <div ng-repeat="attraction in attractions" ng-click="selectAttraction(attraction)" class="list-group-item" ng-class="attraction.selected ? 'active' : ''">{{attraction.name}}</div>
+              <div ng-repeat="attraction in attractions" ng-click="selectAttraction(attraction)" class="list-group-item" ng-class="attraction.selected ? 'active' : ''" right-click>{{attraction.name}}</div>
           </div>
         </section>
       </uib-tab>
     </uib-tabset>
   </div>
-  <div class="col-md-4 col-lg-9" style="padding: 0; height: 100%;">
+  <div class="col-md-9 col-lg-10" style="padding: 0; height: 100%;">
     <div id="map" class="map" ng-init="loadMap()" style="width: 100%; height: 100%; margin-bottom: -100px">
     </div>
   </div>
 </div>
+
+<script type="text/ng-template" id="showAttrDetails.html">
+    <div class="modal-body" id="modal-body">
+      <h3>{{name}} <small>{{location}}</small><span style="float: right; font-size: 14px;">Own this business?</span></h3>
+      <hr />
+      <div class="row">
+        <div class="col-md-6">
+          <address>
+            <strong>{{name}}</strong><br>
+            {{address}}<br>
+            <abbr title="Phone">P:</abbr> (123) 456-7890
+          </address>
+        </div>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-default btn-md">
+            <i class="fa fa-thumb-tack" aria-hidden="true"></i> Show on Map
+          </button>
+          <button type="button" class="btn btn-default btn-md">
+            <i class="fa fa-plus" aria-hidden="true"></i> Add to Bucket
+          </button>
+          <button type="button" class="btn btn-default btn-md">
+            <i class="fa fa-map-marker" aria-hidden="true"></i> Select
+          </button>
+        </div>
+      </div>
+      <section style="height: 200px;">
+      <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="https://scontent.fman1-1.fna.fbcdn.net/v/t31.0-8/q84/s960x960/16797156_1653912594625914_8836844879869293276_o.jpg?oh=944dd5edd7e075ac9db4204fa5d1ce65&oe=592A10C0" alt="...">
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3" style="margin-bottom: 20px;">
+    <a href="#" class="thumbnail">
+      <img src="https://scontent.fman1-1.fna.fbcdn.net/v/t31.0-8/q84/s960x960/16797156_1653912594625914_8836844879869293276_o.jpg?oh=944dd5edd7e075ac9db4204fa5d1ce65&oe=592A10C0" alt="...">
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3" style="margin-bottom: 20px;">
+    <a href="#" class="thumbnail">
+      <img src="https://scontent.fman1-1.fna.fbcdn.net/v/t31.0-8/q84/s960x960/16797156_1653912594625914_8836844879869293276_o.jpg?oh=944dd5edd7e075ac9db4204fa5d1ce65&oe=592A10C0" alt="...">
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3" style="margin-bottom: 20px;">
+    <a href="#" class="thumbnail">
+      <img src="https://scontent.fman1-1.fna.fbcdn.net/v/t31.0-8/q84/s960x960/16797156_1653912594625914_8836844879869293276_o.jpg?oh=944dd5edd7e075ac9db4204fa5d1ce65&oe=592A10C0" alt="...">
+    </a>
+  </div>
+  </section>
+    </div>
+</script>
