--- a/website/angular/views/portal/planner.html
+++ b/website/angular/views/portal/planner.html
@@ -182,6 +182,34 @@
         </span></h3>
     </div>
     <div class="modal-body" id="modal-body">
-      
+            <div class="row center-block" style="width: 60%;">
+                <div class="timeline timeline-line-dotted">
+                    <span class="timeline-label">
+                        <span class="label label-primary">17.03.2016</span>
+                    </span>
+                    <div class="timeline-item" ng-repeat="it in itineraryItems">
+                        <div class="timeline-point timeline-point-success">
+                            <i class="fa fa-money"></i>
+                        </div>
+                        <div class="timeline-event">
+                            <div class="timeline-heading">
+                                <h4>{{it.name}}</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Money transfer. By Alex, Wallet ID: 1234567890, Amount: 10$</p>
+                            </div>
+                            <div class="timeline-footer">
+                                <p class="text-right">17.03.2016 10:00</p>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="timeline-label">
+                        <a href="#" class="btn btn-default" title="More...">
+                            <i class="fa fa-fw fa-history"></i>
+                        </a>
+                    </span>
+                </div>
+            </div>
+            </div>
     </div>
 </script>
